static: fix flex box layout and navigation overlap on mobile device
Reorder folder structure moving html related templates to a folder
called 'html' and adapted the method for reading templates.

Related #100

--- a/static/browser.css
+++ b/static/browser.css
@@ -15,32 +15,29 @@ body {
 	font-size: small;
 	margin: 0;
 	padding: 0;
-}
-
-.page {
-	height: 100%;
 	display: flex;
 	flex-direction: column;
 }
 
-.page>article {
+main {
+	flex: 1;
+}
+
+article {
+	flex: 1;
 	padding: 20px;
 	line-height: 1.5em;
 	font-size: 1.1em;
-	height: 100%;
+	max-width: 80rem;
+	word-wrap: break-word;
 }
 
-.page>article>h1 {
+article>h1 {
 	font-size: 2.2rem;
 	line-height: 1;
 }
 
-.page>article>p {
-	max-width: 60rem;
-	word-wrap: break-word;
-}
-
-.page>footer {
+footer {
 	padding: 20px;
 }
 
@@ -74,6 +71,7 @@ body {
 
 #map {
 	z-index: 1;
+	border-bottom: 1px solid #ccc;
 }
 
 .mapPopup {
@@ -108,6 +106,7 @@ body {
 .navbar-default {
 	border-radius: 0;
 	padding:0;
+	
 }
 
 .navbar-header > h1 {
